# rag_practice

./: main.py  pyproject.toml  requirements.txt  text.txt
notebook/: document.ipynb  pdf_loader.ipynb
