[project]
name = "rag-by-krish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "langchain",
    "langchain-community",
    "langchain-core",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
]
